--- a/consegna/00_Summary.ipynb
+++ b/consegna/00_Summary.ipynb
@@ -7,9 +7,9 @@
     "# <b>Data Mining Challenge 2020</b>\n",
     "\n",
     "## <b>Team</b>\n",
-    "* Tommaso Fioravanti - 105xxxxx(Student-ID)\n",
+    "* Tommaso Fioravanti - 10709486\n",
     "* Matteo Moreschini - 105xxxxx(Student-ID)\n",
-    "* Alessio Introito Russo - 105xxxxx(Student-ID)\n",
+    "* Alessio Introito Russo - 10652428(Student-ID)\n",
     "* Davide Salaorni - 10526800\n",
     "---"
    ]
@@ -23,15 +23,9 @@
     "1. Introduction + Preprocessing\n",
     "2. Baseline\n",
     "3. Data Analysis\n",
-    "4. Cluster Analysis\n",
+    "4. Models\n",
     "5. Feature Engineering\n",
-    "6. Feature Selection\n",
-    "7. Models\n",
-    "8. Feature Importance\n",
-    "9. Model Comparison\n",
-    "10. Final Model\n",
-    "11. Error Analysis (?)\n",
-    "12. Future Steps (?)\n",
+    "6. Final Model\n",
     "\n",
     "Following the notebooks in the previous order, you can get an idea about reasons and objectives of our work, the choices that we have made and the results that we have got. <br>\n",
     "We decided to keep the notebook split for a higher readability. <br>\n",
