--- a/consegna/01_Introduction+Preprocessing.ipynb
+++ b/consegna/01_Introduction+Preprocessing.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "4            29.812030    16492.0      0  25971.0  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -414,14 +414,14 @@
        "[6019 rows x 12 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from preprocessing.preprocessing import preprocessing, inverse_interpolation\n",
-    "df_prepr = preprocessing(csv_train, csv_test)\n",
+    "df_prepr = preprocessing(csv_train.copy(), csv_test.copy())\n",
     "df_prepr"
    ]
   },
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -687,13 +687,13 @@
        "[8083 rows x 12 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_augmented = preprocessing(csv_train, csv_test, useTest=False, dataAugmentation=True)\n",
+    "df_augmented = preprocessing(csv_train.copy(), csv_test.copy(), useTest=False, dataAugmentation=True)\n",
     "df_augmented.sort_values(['Date', 'sku'])"
    ]
   },
@@ -702,12 +702,12 @@
    "metadata": {},
    "source": [
     "For the tuning and the model evaluation we have had the need to use a validation set. <br>\n",
-    "For its creation we have decided to take the 20% of the original train. Since we are dealing with time series, we have tought to exploit as much as possible the more recent data, so we have chosen to predict week-by-week, appending the current prediction to the train and thining more and more the validation set (in practice, a sort of crossvalidation)."
+    "For its creation we have decided to take the 10% of the original train. Since we are dealing with time series, we have tought to exploit as much as possible the more recent data, so we have chosen to predict week-by-week, appending the current prediction to the train and thining more and more the validation set (in practice, a sort of crossvalidation)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -747,79 +747,79 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>NaT</td>\n",
+       "      <th>120</th>\n",
+       "      <td>2019-03-30</td>\n",
        "      <td>144</td>\n",
        "      <td>0</td>\n",
        "      <td>114.23</td>\n",
        "      <td>1</td>\n",
-       "      <td>2.18</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2.31</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>97.144530</td>\n",
+       "      <td>11.329687</td>\n",
        "      <td>1</td>\n",
-       "      <td>10.845855</td>\n",
-       "      <td>51320.0</td>\n",
+       "      <td>10.841324</td>\n",
+       "      <td>51088.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NaT</td>\n",
-       "      <td>144</td>\n",
-       "      <td>0</td>\n",
+       "      <th>278</th>\n",
+       "      <td>2019-03-30</td>\n",
+       "      <td>546</td>\n",
+       "      <td>1</td>\n",
        "      <td>114.23</td>\n",
        "      <td>1</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>45.0</td>\n",
+       "      <td>0.39</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>35.863075</td>\n",
+       "      <td>11.226483</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12.015814</td>\n",
+       "      <td>165348.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>436</th>\n",
+       "      <td>2019-03-30</td>\n",
+       "      <td>549</td>\n",
+       "      <td>1</td>\n",
+       "      <td>114.23</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>37.627590</td>\n",
+       "      <td>10.439191</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.628225</td>\n",
+       "      <td>112220.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>594</th>\n",
+       "      <td>2019-03-30</td>\n",
+       "      <td>554</td>\n",
+       "      <td>1</td>\n",
+       "      <td>114.23</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>36.440045</td>\n",
+       "      <td>11.828371</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12.527507</td>\n",
+       "      <td>275820.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>752</th>\n",
+       "      <td>2019-03-30</td>\n",
+       "      <td>686</td>\n",
+       "      <td>0</td>\n",
+       "      <td>125.65</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.35</td>\n",
+       "      <td>59.0</td>\n",
        "      <td>100.000000</td>\n",
-       "      <td>10.845855</td>\n",
+       "      <td>11.392496</td>\n",
        "      <td>1</td>\n",
-       "      <td>11.103934</td>\n",
-       "      <td>66431.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NaT</td>\n",
-       "      <td>144</td>\n",
-       "      <td>0</td>\n",
-       "      <td>114.23</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.05</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>11.103934</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10.950842</td>\n",
-       "      <td>57001.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>NaT</td>\n",
-       "      <td>144</td>\n",
-       "      <td>0</td>\n",
-       "      <td>114.23</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>10.950842</td>\n",
-       "      <td>1</td>\n",
-       "      <td>9.619333</td>\n",
-       "      <td>15052.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>NaT</td>\n",
-       "      <td>144</td>\n",
-       "      <td>0</td>\n",
-       "      <td>114.23</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.99</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>28.534193</td>\n",
-       "      <td>9.619333</td>\n",
-       "      <td>1</td>\n",
-       "      <td>9.999570</td>\n",
-       "      <td>22016.0</td>\n",
+       "      <td>10.893140</td>\n",
+       "      <td>53805.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -837,68 +837,68 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6014</th>\n",
-       "      <td>NaT</td>\n",
-       "      <td>2718</td>\n",
+       "      <th>5486</th>\n",
+       "      <td>2019-06-22</td>\n",
+       "      <td>2705</td>\n",
        "      <td>1</td>\n",
-       "      <td>395.41</td>\n",
+       "      <td>131.80</td>\n",
        "      <td>0</td>\n",
-       "      <td>1.11</td>\n",
+       "      <td>0.58</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>26.050480</td>\n",
-       "      <td>10.430462</td>\n",
+       "      <td>0.738641</td>\n",
+       "      <td>11.301883</td>\n",
        "      <td>0</td>\n",
-       "      <td>10.414183</td>\n",
-       "      <td>33328.0</td>\n",
+       "      <td>11.295926</td>\n",
+       "      <td>80492.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6015</th>\n",
-       "      <td>NaT</td>\n",
-       "      <td>2718</td>\n",
+       "      <th>5619</th>\n",
+       "      <td>2019-06-22</td>\n",
+       "      <td>2707</td>\n",
+       "      <td>1</td>\n",
+       "      <td>439.34</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.50</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>55.944352</td>\n",
+       "      <td>10.540329</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10.512383</td>\n",
+       "      <td>36767.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5752</th>\n",
+       "      <td>2019-06-22</td>\n",
+       "      <td>2711</td>\n",
        "      <td>1</td>\n",
        "      <td>395.41</td>\n",
        "      <td>0</td>\n",
-       "      <td>1.30</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>43.099496</td>\n",
-       "      <td>10.414183</td>\n",
-       "      <td>0</td>\n",
-       "      <td>10.021848</td>\n",
-       "      <td>22512.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6016</th>\n",
-       "      <td>NaT</td>\n",
-       "      <td>2718</td>\n",
-       "      <td>1</td>\n",
-       "      <td>395.41</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.55</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>10.021848</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9.767782</td>\n",
-       "      <td>17461.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6017</th>\n",
-       "      <td>NaT</td>\n",
-       "      <td>2718</td>\n",
-       "      <td>1</td>\n",
-       "      <td>395.41</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.55</td>\n",
+       "      <td>1.09</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>9.767782</td>\n",
+       "      <td>8.676928</td>\n",
        "      <td>0</td>\n",
-       "      <td>9.747185</td>\n",
-       "      <td>17105.0</td>\n",
+       "      <td>9.365548</td>\n",
+       "      <td>11678.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5885</th>\n",
+       "      <td>2019-06-22</td>\n",
+       "      <td>2712</td>\n",
+       "      <td>1</td>\n",
+       "      <td>395.41</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.09</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>9.350015</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10.108345</td>\n",
+       "      <td>24546.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6018</th>\n",
-       "      <td>NaT</td>\n",
+       "      <td>2019-06-22</td>\n",
        "      <td>2718</td>\n",
        "      <td>1</td>\n",
        "      <td>395.41</td>\n",
@@ -913,52 +913,59 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6019 rows × 12 columns</p>\n",
+       "<p>559 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Date   sku  pack  size (GM)  brand  price  POS_exposed w-1  \\\n",
-       "0     NaT   144     0     114.23      1   2.18              NaN   \n",
-       "1     NaT   144     0     114.23      1   2.00             45.0   \n",
-       "2     NaT   144     0     114.23      1   2.05             17.0   \n",
-       "3     NaT   144     0     114.23      1   3.00              2.0   \n",
-       "4     NaT   144     0     114.23      1   2.99              2.0   \n",
-       "...   ...   ...   ...        ...    ...    ...              ...   \n",
-       "6014  NaT  2718     1     395.41      0   1.11              0.0   \n",
-       "6015  NaT  2718     1     395.41      0   1.30              1.0   \n",
-       "6016  NaT  2718     1     395.41      0   1.55              0.0   \n",
-       "6017  NaT  2718     1     395.41      0   1.55              0.0   \n",
-       "6018  NaT  2718     1     395.41      0   1.12              0.0   \n",
+       "           Date   sku  pack  size (GM)  brand  price  POS_exposed w-1  \\\n",
+       "120  2019-03-30   144     0     114.23      1   2.31             60.0   \n",
+       "278  2019-03-30   546     1     114.23      1   0.39              1.0   \n",
+       "436  2019-03-30   549     1     114.23      1   0.35              0.0   \n",
+       "594  2019-03-30   554     1     114.23      1   0.40              6.0   \n",
+       "752  2019-03-30   686     0     125.65      3   2.35             59.0   \n",
+       "...         ...   ...   ...        ...    ...    ...              ...   \n",
+       "5486 2019-06-22  2705     1     131.80      0   0.58              0.0   \n",
+       "5619 2019-06-22  2707     1     439.34      0   1.50             10.0   \n",
+       "5752 2019-06-22  2711     1     395.41      0   1.09              0.0   \n",
+       "5885 2019-06-22  2712     1     395.41      0   1.09              0.0   \n",
+       "6018 2019-06-22  2718     1     395.41      0   1.12              0.0   \n",
        "\n",
        "      volume_on_promo w-1  sales w-1  scope     target  real_target  \n",
-       "0                     NaN        NaN      1  10.845855      51320.0  \n",
-       "1              100.000000  10.845855      1  11.103934      66431.0  \n",
-       "2              100.000000  11.103934      1  10.950842      57001.0  \n",
-       "3              100.000000  10.950842      1   9.619333      15052.0  \n",
-       "4               28.534193   9.619333      1   9.999570      22016.0  \n",
+       "120             97.144530  11.329687      1  10.841324      51088.0  \n",
+       "278             35.863075  11.226483      1  12.015814     165348.0  \n",
+       "436             37.627590  10.439191      1  11.628225     112220.0  \n",
+       "594             36.440045  11.828371      1  12.527507     275820.0  \n",
+       "752            100.000000  11.392496      1  10.893140      53805.0  \n",
        "...                   ...        ...    ...        ...          ...  \n",
-       "6014            26.050480  10.430462      0  10.414183      33328.0  \n",
-       "6015            43.099496  10.414183      0  10.021848      22512.0  \n",
-       "6016             0.000000  10.021848      0   9.767782      17461.0  \n",
-       "6017             0.000000   9.767782      0   9.747185      17105.0  \n",
+       "5486             0.738641  11.301883      0  11.295926      80492.0  \n",
+       "5619            55.944352  10.540329      0  10.512383      36767.0  \n",
+       "5752             0.000000   8.676928      0   9.365548      11678.0  \n",
+       "5885             0.000000   9.350015      0  10.108345      24546.0  \n",
        "6018             0.080094   9.747185      0  10.467238      35144.0  \n",
        "\n",
-       "[6019 rows x 12 columns]"
+       "[559 rows x 12 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from preprocessing.preprocessing import train_validation_split\n",
+    "from preprocessing.preprocessing import train_validation_split, preprocessing\n",
     "df = preprocessing(csv_train.copy(), csv_test.copy(), useTest=False)\n",
     "df_t = df[~df.target.isna()]\n",
-    "df_train, df_val, val_dates = train_validation_split(df_t, k=0.20)\n",
-    "df_val = df_val.sort_values(['Date'])\n",
-    "df"
+    "df_train, df_val, val_dates = train_validation_split(df_t, k=0.10)\n",
+    "df_val = df_val.sort_values(['Date', 'sku'])\n",
+    "df_val"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
