fix volume prepr and snake plots

--- a/consegna/01_Introduction+Preprocessing.ipynb
+++ b/consegna/01_Introduction+Preprocessing.ipynb
@@ -429,8 +429,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Another important decision taken has been the choice to increase the number of data. Dealing with decision trees is better to have a lot of samples and we saw some improvements with data augmentation. So, taking weeks of 2017 and 2018, computing their means and adding some noise, we have created a realistic 2016.<br>\n",
-    "This will be useful in the next notebooks when we will try a stacking approach (?)."
+    "Another important decision taken has been the choice to increase the number of data. Dealing with decision trees is better to have a lot of samples and we saw some improvements with data augmentation. So, taking weeks of 2017 and 2018, giving them for each sample some random weights, we have created a realistic 2016. This will be also useful with a stacking approach."
    ]
   },
   {
