--- a/consegna/05_Feature_Engineering.ipynb
+++ b/consegna/05_Feature_Engineering.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,12 +27,12 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib as mpl\n",
     "import seaborn as sns\n",
-    "import sys\n",
-    "sys.path.append(\"../\")\n",
+    "\n",
     "\n",
     "csv_train = pd.read_csv(\"../dataset/original/train.csv\")\n",
     "csv_test = pd.read_csv(\"../dataset/original/x_test.csv\")\n",
-    "\n",
+    "import sys\n",
+    "sys.path.append(\"../\")\n",
     "from preprocessing.preprocessing import preprocessing \n",
     "df = preprocessing(csv_train, csv_test)\n",
     "df = df.sort_values(['Date'])"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,23 +63,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "6019it [00:00, 7716.39it/s]\n",
-      "6019it [00:00, 40244.47it/s]\n",
-      "100%|██████████| 43/43 [00:00<00:00, 789.31it/s]\n"
+      "6019it [00:00, 7546.29it/s]\n",
+      "6019it [00:00, 43026.60it/s]\n",
+      "100%|██████████| 43/43 [00:00<00:00, 805.87it/s]\n"
      ]
     }
    ],
    "source": [
     "import os\n",
-    "os.chdir(\"../\")\n",
+    "#os.chdir(\"../\")\n",
     "df, categorical_f = add_all_features(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from features.tot_price_imp import tot_price_per_wk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df= tot_price_per_wk(df)"
    ]
   },
   {
@@ -91,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -118,13 +136,13 @@
        "      <th>Date</th>\n",
        "      <th>sku</th>\n",
        "      <th>sales w-1</th>\n",
-       "      <th>real_target</th>\n",
        "      <th>moving_average_20</th>\n",
        "      <th>increment</th>\n",
        "      <th>exp_ma</th>\n",
        "      <th>lag_target_25</th>\n",
        "      <th>lag_target_50</th>\n",
        "      <th>lag_pos1</th>\n",
+       "      <th>days_to_christmas</th>\n",
        "      <th>...</th>\n",
        "      <th>partial_sales</th>\n",
        "      <th>gte_pack</th>\n",
@@ -144,13 +162,13 @@
        "      <td>2016-12-10</td>\n",
        "      <td>144</td>\n",
        "      <td>10.497091</td>\n",
-       "      <td>51320.0</td>\n",
        "      <td>10.497091</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>10.497091</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>15</td>\n",
        "      <td>...</td>\n",
        "      <td>10.497091</td>\n",
        "      <td>NaN</td>\n",
@@ -168,13 +186,13 @@
        "      <td>2016-12-17</td>\n",
        "      <td>144</td>\n",
        "      <td>10.845855</td>\n",
-       "      <td>66431.0</td>\n",
        "      <td>10.671473</td>\n",
        "      <td>0.348765</td>\n",
        "      <td>10.780462</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>73.0</td>\n",
+       "      <td>8</td>\n",
        "      <td>...</td>\n",
        "      <td>21.342946</td>\n",
        "      <td>9.772905</td>\n",
@@ -192,13 +210,13 @@
        "      <td>2016-12-24</td>\n",
        "      <td>144</td>\n",
        "      <td>11.103934</td>\n",
-       "      <td>57001.0</td>\n",
        "      <td>10.815627</td>\n",
        "      <td>0.258079</td>\n",
        "      <td>11.032383</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>45.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>...</td>\n",
        "      <td>32.446880</td>\n",
        "      <td>9.778908</td>\n",
@@ -216,13 +234,13 @@
        "      <td>2016-12-31</td>\n",
        "      <td>144</td>\n",
        "      <td>10.950842</td>\n",
-       "      <td>15052.0</td>\n",
        "      <td>10.849430</td>\n",
        "      <td>-0.153093</td>\n",
        "      <td>10.969480</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>17.0</td>\n",
+       "      <td>-6</td>\n",
        "      <td>...</td>\n",
        "      <td>43.397722</td>\n",
        "      <td>9.778101</td>\n",
@@ -240,13 +258,13 @@
        "      <td>2017-01-07</td>\n",
        "      <td>144</td>\n",
        "      <td>9.619333</td>\n",
-       "      <td>22016.0</td>\n",
        "      <td>10.603411</td>\n",
        "      <td>-1.331509</td>\n",
        "      <td>9.930225</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>352</td>\n",
        "      <td>...</td>\n",
        "      <td>53.017054</td>\n",
        "      <td>NaN</td>\n",
@@ -288,13 +306,13 @@
        "      <td>2019-05-25</td>\n",
        "      <td>2718</td>\n",
        "      <td>10.430462</td>\n",
-       "      <td>33328.0</td>\n",
        "      <td>10.248088</td>\n",
        "      <td>0.039499</td>\n",
        "      <td>10.417519</td>\n",
        "      <td>10.260427</td>\n",
        "      <td>10.319662</td>\n",
        "      <td>6.0</td>\n",
+       "      <td>214</td>\n",
        "      <td>...</td>\n",
        "      <td>1328.606741</td>\n",
        "      <td>NaN</td>\n",
@@ -312,13 +330,13 @@
        "      <td>2019-06-01</td>\n",
        "      <td>2718</td>\n",
        "      <td>10.414183</td>\n",
-       "      <td>22512.0</td>\n",
        "      <td>10.277276</td>\n",
        "      <td>-0.016279</td>\n",
        "      <td>10.414953</td>\n",
        "      <td>10.223467</td>\n",
        "      <td>10.324859</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>207</td>\n",
        "      <td>...</td>\n",
        "      <td>1339.020924</td>\n",
        "      <td>10.339415</td>\n",
@@ -336,13 +354,13 @@
        "      <td>2019-06-08</td>\n",
        "      <td>2718</td>\n",
        "      <td>10.021848</td>\n",
-       "      <td>17461.0</td>\n",
        "      <td>10.268582</td>\n",
        "      <td>-0.392335</td>\n",
        "      <td>10.112565</td>\n",
        "      <td>10.204518</td>\n",
        "      <td>10.307318</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>200</td>\n",
        "      <td>...</td>\n",
        "      <td>1349.042772</td>\n",
        "      <td>NaN</td>\n",
@@ -360,13 +378,13 @@
        "      <td>2019-06-15</td>\n",
        "      <td>2718</td>\n",
        "      <td>9.767782</td>\n",
-       "      <td>17105.0</td>\n",
        "      <td>10.244279</td>\n",
        "      <td>-0.254066</td>\n",
        "      <td>9.847348</td>\n",
        "      <td>10.253088</td>\n",
        "      <td>10.400072</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>193</td>\n",
        "      <td>...</td>\n",
        "      <td>1358.810554</td>\n",
        "      <td>NaN</td>\n",
@@ -384,13 +402,13 @@
        "      <td>2019-06-22</td>\n",
        "      <td>2718</td>\n",
        "      <td>9.747185</td>\n",
-       "      <td>35144.0</td>\n",
        "      <td>10.219494</td>\n",
        "      <td>-0.020598</td>\n",
        "      <td>9.770299</td>\n",
        "      <td>9.801233</td>\n",
        "      <td>10.406170</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>186</td>\n",
        "      <td>...</td>\n",
        "      <td>1368.557739</td>\n",
        "      <td>10.247866</td>\n",
@@ -405,86 +423,86 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6019 rows × 22 columns</p>\n",
+       "<p>6019 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           Date   sku  sales w-1  real_target  moving_average_20  increment  \\\n",
-       "0    2016-12-10   144  10.497091      51320.0          10.497091   0.000000   \n",
-       "1    2016-12-17   144  10.845855      66431.0          10.671473   0.348765   \n",
-       "2    2016-12-24   144  11.103934      57001.0          10.815627   0.258079   \n",
-       "3    2016-12-31   144  10.950842      15052.0          10.849430  -0.153093   \n",
-       "4    2017-01-07   144   9.619333      22016.0          10.603411  -1.331509   \n",
-       "...         ...   ...        ...          ...                ...        ...   \n",
-       "6014 2019-05-25  2718  10.430462      33328.0          10.248088   0.039499   \n",
-       "6015 2019-06-01  2718  10.414183      22512.0          10.277276  -0.016279   \n",
-       "6016 2019-06-08  2718  10.021848      17461.0          10.268582  -0.392335   \n",
-       "6017 2019-06-15  2718   9.767782      17105.0          10.244279  -0.254066   \n",
-       "6018 2019-06-22  2718   9.747185      35144.0          10.219494  -0.020598   \n",
+       "           Date   sku  sales w-1  moving_average_20  increment     exp_ma  \\\n",
+       "0    2016-12-10   144  10.497091          10.497091   0.000000  10.497091   \n",
+       "1    2016-12-17   144  10.845855          10.671473   0.348765  10.780462   \n",
+       "2    2016-12-24   144  11.103934          10.815627   0.258079  11.032383   \n",
+       "3    2016-12-31   144  10.950842          10.849430  -0.153093  10.969480   \n",
+       "4    2017-01-07   144   9.619333          10.603411  -1.331509   9.930225   \n",
+       "...         ...   ...        ...                ...        ...        ...   \n",
+       "6014 2019-05-25  2718  10.430462          10.248088   0.039499  10.417519   \n",
+       "6015 2019-06-01  2718  10.414183          10.277276  -0.016279  10.414953   \n",
+       "6016 2019-06-08  2718  10.021848          10.268582  -0.392335  10.112565   \n",
+       "6017 2019-06-15  2718   9.767782          10.244279  -0.254066   9.847348   \n",
+       "6018 2019-06-22  2718   9.747185          10.219494  -0.020598   9.770299   \n",
        "\n",
-       "         exp_ma  lag_target_25  lag_target_50  lag_pos1  ...  partial_sales  \\\n",
-       "0     10.497091            NaN            NaN       NaN  ...      10.497091   \n",
-       "1     10.780462            NaN            NaN      73.0  ...      21.342946   \n",
-       "2     11.032383            NaN            NaN      45.0  ...      32.446880   \n",
-       "3     10.969480            NaN            NaN      17.0  ...      43.397722   \n",
-       "4      9.930225            NaN            NaN       2.0  ...      53.017054   \n",
-       "...         ...            ...            ...       ...  ...            ...   \n",
-       "6014  10.417519      10.260427      10.319662       6.0  ...    1328.606741   \n",
-       "6015  10.414953      10.223467      10.324859       0.0  ...    1339.020924   \n",
-       "6016  10.112565      10.204518      10.307318       1.0  ...    1349.042772   \n",
-       "6017   9.847348      10.253088      10.400072       0.0  ...    1358.810554   \n",
-       "6018   9.770299       9.801233      10.406170       0.0  ...    1368.557739   \n",
+       "      lag_target_25  lag_target_50  lag_pos1  days_to_christmas  ...  \\\n",
+       "0               NaN            NaN       NaN                 15  ...   \n",
+       "1               NaN            NaN      73.0                  8  ...   \n",
+       "2               NaN            NaN      45.0                  1  ...   \n",
+       "3               NaN            NaN      17.0                 -6  ...   \n",
+       "4               NaN            NaN       2.0                352  ...   \n",
+       "...             ...            ...       ...                ...  ...   \n",
+       "6014      10.260427      10.319662       6.0                214  ...   \n",
+       "6015      10.223467      10.324859       0.0                207  ...   \n",
+       "6016      10.204518      10.307318       1.0                200  ...   \n",
+       "6017      10.253088      10.400072       0.0                193  ...   \n",
+       "6018       9.801233      10.406170       0.0                186  ...   \n",
        "\n",
-       "       gte_pack  gte_brand  gte_cluster  gte_pack_brand  gte_pack_cluster  \\\n",
-       "0           NaN        NaN          NaN             NaN               NaN   \n",
-       "1      9.772905  10.948660    10.316708       10.425722         10.268269   \n",
-       "2      9.778908  10.928479    10.356906       10.441833         10.323733   \n",
-       "3      9.778101  10.898996    10.401520       10.453786         10.388416   \n",
-       "4           NaN        NaN          NaN             NaN               NaN   \n",
-       "...         ...        ...          ...             ...               ...   \n",
-       "6014        NaN        NaN          NaN             NaN               NaN   \n",
-       "6015  10.339415   9.893133     9.954137       10.052164         10.062220   \n",
-       "6016        NaN        NaN          NaN             NaN               NaN   \n",
-       "6017        NaN        NaN          NaN             NaN               NaN   \n",
-       "6018  10.247866   9.832026     9.938841        9.943613         10.034641   \n",
+       "      partial_sales   gte_pack  gte_brand  gte_cluster  gte_pack_brand  \\\n",
+       "0         10.497091        NaN        NaN          NaN             NaN   \n",
+       "1         21.342946   9.772905  10.948660    10.316708       10.425722   \n",
+       "2         32.446880   9.778908  10.928479    10.356906       10.441833   \n",
+       "3         43.397722   9.778101  10.898996    10.401520       10.453786   \n",
+       "4         53.017054        NaN        NaN          NaN             NaN   \n",
+       "...             ...        ...        ...          ...             ...   \n",
+       "6014    1328.606741        NaN        NaN          NaN             NaN   \n",
+       "6015    1339.020924  10.339415   9.893133     9.954137       10.052164   \n",
+       "6016    1349.042772        NaN        NaN          NaN             NaN   \n",
+       "6017    1358.810554        NaN        NaN          NaN             NaN   \n",
+       "6018    1368.557739  10.247866   9.832026     9.938841        9.943613   \n",
        "\n",
-       "      gte_brand_cluster  gte_pack_brand_cluster  week_of_the_year  \\\n",
-       "0                   NaN                     NaN                49   \n",
-       "1             10.599625               10.416904                50   \n",
-       "2             10.634837               10.461260                51   \n",
-       "3             10.662687               10.509111                52   \n",
-       "4                   NaN                     NaN                 1   \n",
-       "...                 ...                     ...               ...   \n",
-       "6014                NaN                     NaN                21   \n",
-       "6015           9.856015               10.076289                22   \n",
-       "6016                NaN                     NaN                23   \n",
-       "6017                NaN                     NaN                24   \n",
-       "6018           9.802520                9.970272                25   \n",
+       "      gte_pack_cluster  gte_brand_cluster  gte_pack_brand_cluster  \\\n",
+       "0                  NaN                NaN                     NaN   \n",
+       "1            10.268269          10.599625               10.416904   \n",
+       "2            10.323733          10.634837               10.461260   \n",
+       "3            10.388416          10.662687               10.509111   \n",
+       "4                  NaN                NaN                     NaN   \n",
+       "...                ...                ...                     ...   \n",
+       "6014               NaN                NaN                     NaN   \n",
+       "6015         10.062220           9.856015               10.076289   \n",
+       "6016               NaN                NaN                     NaN   \n",
+       "6017               NaN                NaN                     NaN   \n",
+       "6018         10.034641           9.802520                9.970272   \n",
        "\n",
-       "      tot_cost_imp  \n",
-       "0        24.773134  \n",
-       "1        23.643965  \n",
-       "2        22.207868  \n",
-       "3        22.449225  \n",
-       "4        28.857998  \n",
-       "...            ...  \n",
-       "6014     11.577813  \n",
-       "6015     11.559743  \n",
-       "6016     13.028403  \n",
-       "6017     15.140063  \n",
-       "6018     15.108136  \n",
+       "      week_of_the_year  tot_cost_imp  \n",
+       "0                   49     24.773134  \n",
+       "1                   50     23.643965  \n",
+       "2                   51     22.207868  \n",
+       "3                   52     22.449225  \n",
+       "4                    1     28.857998  \n",
+       "...                ...           ...  \n",
+       "6014                21     11.577813  \n",
+       "6015                22     11.559743  \n",
+       "6016                23     13.028403  \n",
+       "6017                24     15.140063  \n",
+       "6018                25     15.108136  \n",
        "\n",
-       "[6019 rows x 22 columns]"
+       "[6019 rows x 21 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "col=['pack','size (GM)', 'brand','price','POS_exposed w-1','volume_on_promo w-1','month','day','year','seasons','cluster','scope',\n",
-    "    'target']\n",
+    "    'target','real_target']\n",
     "df1=df.drop(col,axis=1)\n",
     "df1\n"
    ]
@@ -518,7 +536,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TODO -> METTERE FEATURE GAUSSIAN"
+    "#TODO -> METTERE FEATURE GAUSSIAN"
    ]
   },
   {
