--- a/consegna/00_Summary.ipynb
+++ b/consegna/00_Summary.ipynb
@@ -8,8 +8,8 @@
     "\n",
     "## <b>Team</b>\n",
     "* Tommaso Fioravanti - 10709486\n",
-    "* Matteo Moreschini - 105xxxxx(Student-ID)\n",
-    "* Alessio Introito Russo - 10652428(Student-ID)\n",
+    "* Matteo Moreschini - 10652325\n",
+    "* Alessio Introito Russo - 10652428\n",
     "* Davide Salaorni - 10526800\n",
     "---"
    ]
