--- a/consegna/01_Introduction+Preprocessing.ipynb
+++ b/consegna/01_Introduction+Preprocessing.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# <b>1.1 Introduction</b>\n",
-    "The project is based on sales forecasting. Indeed, we have been provided with aggregated weekly-recorded information for different products (_SKU_) throughout a 3  years time window, from December 2016 to December 2019. W\n",
+    "The project is based on sales forecasting. We have been provided with aggregated weekly-recorded information for different products (_SKU_) throughout a 3  years time window, from December 2016 to December 2019. W\n",
     "e are asked to forecast the weekly sales regarding 12 of the 43 products in the dataset. <br>\n",
     "The metric that we are going to use to estimate the goodness of our predictions is the Mean Average Percentage Error (_MAPE_).\n",
     "\n",
@@ -754,7 +754,7 @@
    "metadata": {},
    "source": [
     "For the tuning and the model evaluation we have had the need to use a **validation set**. <br>\n",
-    "For its creation we have decided to take the 10% of the original train. Since we are dealing with time series, we have tought to exploit as much as possible the more recent data, so we have chosen to predict week-by-week, appending the current prediction to the train and thining more and more the validation set (in practice, a sort of crossvalidation)."
+    "For its creation we have decided to take the 10% of the original train. Since we are dealing with time series, we have thought to exploit as much as possible the more recent data, so we have chosen to predict week-by-week, appending the current prediction to the train and thining more and more the validation set (in practice, a sort of crossvalidation)."
    ]
   },
   {
