guidelines to run models

--- a/consegna/00_Summary.ipynb
+++ b/consegna/00_Summary.ipynb
@@ -32,6 +32,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Guidelines to run models:\n",
+    "In the notebook _5. Models_ we provide you with the code to run the different models that we used. <br> Actually, we suggest you to not run them from the notebook, since they are too computational and time expensive, but its better to execute the _run_model.py_ script giving as parameter the name of the desired model ('lgb_std', 'lgb_cls', 'catboost'). Only for XGBoost you have to run _XGBoost.py_ setting parameter _save_ to False. <br> <br>\n",
+    "Instead to run the final model you need to follow the next steps:\n",
+    "1. run _create_stacking_datasets.py_ in order to create the datasets for the meta-learner: this script extracts predictions both of _LightGBM_standard_, _LightGBM_cluster_ and _Catboost_;\n",
+    "2. run the main in _XGBoost.py_ to extract the predictions;\n",
+    "3. run _stacking.py_ to get final results.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
